Fix: Removed overlapping of social media share

--- a/src/components/blogList.scss
+++ b/src/components/blogList.scss
@@ -1,7 +1,4 @@
 main {
-    max-width: 650px;
-    margin: 0 auto;
-
     h5 {
         margin: 0;
     }
